Version 2.2.0.8 Beta 5
=================
bear:
- Various fixes made.
- Fixed a problem in the shared memory handler that was causing locking of the file ref count.

Version 2.2.0.8 Beta 1
=================
bear:
- Added two new filters based on the TSFileSource & TSFileSink called TSParserSource & TSParserSink.
- Implemented a SharedMemory class to mimic the Win32 API File Handler methods in shared memory.
- Added playing of Shared Memory files to the TSFileSource & TSParserSource Filters
- Added a input pin with its own MultiMemWriter class so it can timeshift to shared memory of incomming streams.
- Fixed various bug in the filters for playing transport stream files.
- Added reference clock speed change support to the Source Filter's property pages for testing. 

Version 2.2.0.7 Final
=================
bear:
- Fixed a problem with the DVB Format code that was not allowing PAT less only file to play.
- Some minor fixes, Added some support for DTS Audio & Subtitle outputs.
- Major rework of the Demux pin change code.
- Major changes of the Demux change code.

Version 2.2.0.6 Beta 6
=================
bear:
- Changed some things to improve performance for cold starting.
- Fixed a proble in the Checkconnect() method where it was allowing connection to other than MS Demux filters.
- Minor code changes to the reference clock mode setting when reloading the file name. The Clock mode setting is now kept after a file reload..
- Removed the reference clock -1% change when cold starting, may have been causing some lipsync problems TBA.
- Some minor changes to remove some threading stuff.
- Found a problem with frame dropping when running in non HT mode. Removed the regular parser update call as well as disabled the TSBuffer extra threading.
- Added some fixes to make the Netrender class work with the URL input format.
- Added a High ProcessClass priority to the Net Render::CreateNetworkGraph() function if the dsnetwork graph was successful in building.

Version 2.2.0.5 Final